@@ -1,3 +1,8 @@
+2010-04-10  Per Bothner  <per@bothner.com>
+
+	* AnnotationEntry.java: New class - a placeholder for future
+	annotation support.
+
 2010-04-02  Per Bothner  <per@bothner.com>
 
 	* PrimType.java (coerceFromObject): Add support for boolean.
